[tool.poetry]
name = "clip-write-words"
version = "0.1.0"
description = ""
authors = ["Gambhiro <gambhiro@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyautogui = "^0.9.54"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
